--- a/Index.html
+++ b/Index.html
@@ -35,6 +35,7 @@
           <ul class="nav navbar-nav">
             <li><a href="#education">Education</a></li>
             <li><a href="#services">Services</a></li>
+            <li><a href="http://github.com/smur89/">GitHub</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
@@ -63,16 +64,60 @@
 
         <h1 class="heading">Education</h1>
 
+        <!-- ITT -->
         <div class="featurette" id="ITT">
           <img class="featurette-image img-responsive pull-right" src="images/IT_Tallaght_logo.jpg">
-          <h2 class="featurette-heading">IT Tallaght <span class="text-muted">BSc (Hons) Computing</span></h2>
+          <h2 class="featurette-heading">IT Tallaght <span class="text-muted">BSc (Hons)</span></h2>
+          <h3>Computing</h3>
           <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-        </div>
-      </div> 
 
+          <!-- GPA -->
+          <div class="list-group" id="GPA">
+            <a href="#GPA" class="list-group-item active">
+            <h4 class="list-group-item-heading">GPA</h4></a>
+
+            <a href="#GPA" class="list-group-item">
+            <h4 class="list-group-item-heading">Year 1</h4>
+            <p class="list-group-item-text">3.71</p></a>
+
+            <a href="#GPA" class="list-group-item">
+            <h4 class="list-group-item-heading">Year 2</h4>
+            <p class="list-group-item-text">3.82</p></a>
+
+            <a href="#GPA" class="list-group-item">
+            <h4 class="list-group-item-heading">Year 3</h4>
+            <p class="list-group-item-text">3.88</p></a>
+
+            <a href="#GPA" class="list-group-item">
+            <h4 class="list-group-item-heading">Year 4</h4>
+            <p class="list-group-item-text">Expected 1.1</p></a>
+          </div> <!-- /GPA List Group -->
+
+          <!-- Projects -->
+          <div class="list-group">
+            <a href="#" class="list-group-item active">
+            <h4 class="list-group-item-heading">Projects</h4></a>
+
+            <a href="http://github.com/smur89/Payroll" class="list-group-item">
+            <h4 class="list-group-item-heading">Year 2</h4>
+            <p class="list-group-item-text">Java Payroll System</p></a>
+
+            <a href="http://github.com/smur89/eUp" class="list-group-item">
+            <h4 class="list-group-item-heading">Year 3</h4>
+            <p class="list-group-item-text">eUp</p></a>
+
+            <a href="http://github.com/smur89/IBM-CD-Dashboard" class="list-group-item">
+            <h4 class="list-group-item-heading">Year 4</h4>
+            <p class="list-group-item-text">IBM CD Adoption Dashboard</p></a>
+          </div> <!-- /Projects List Group -->
+
+        </div>
+
+      <!-- IADT -->
       <div class="featurette" id="IADT">
         <img class="featurette-image img-responsive pull-left" src="images/IADT_logo.jpg">
-        <h2 class="featurette-heading">IADT <span class="text-muted">BSc (Hons) Computing</span></h2>
+        <h2 class="featurette-heading">IADT <span class="text-muted">Higher Certificate in Engineering </span></h2>
+        <h3>Audio Visual Media Technology</h3>
         <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
         </div>
       </div> <!-- /education -->
