--- a/Index.html
+++ b/Index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-
+  <!-- Nav Bar -->
   <nav class="navbar navbar-fixed-top navbar-inverse" role="navigation">
     <div class="container">
       <div class="navbar-header">
@@ -40,21 +40,23 @@
           <li><a href="#seeking">Seeking</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="http://github.com/smur89/">GitHub</a></li>
-          <li><a data-toggle="modal" href="#contact">Contact</a></li>
+          <li><a data-toggle="modal" data-target="#contactModal">Contact</a></li>
         </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container -->
   </nav>
 
   <!-- Full Page Image Header Area -->
-  <div id="top" class="header header-image">
+  <div id="top" class="header-image header">
     <div class="vert-text">
-      <h1>Shane Murphy</h1>
-      <h3>BSc <em>(Hons)</em> Computing</h3>
-      <a href="#education" class="btn btn-default btn-lg">Find Out More</a><br/><br/>
-      <!-- Button trigger contact modal -->
+      <div class="container">
+        <h1>Shane Murphy</h1>
+        <h3>BSc <em>(Hons)</em> Computing</h3>
+        <a href="#education" class="btn btn-default btn-lg">Find Out More</a><br/><br/>
+       <!-- Button trigger contact modal -->
 
-      <a data-toggle="modal" href="#contact" class="btn btn-primary btn-lg">Contact</a>
+        <a data-toggle="modal" data-target="#contactModal" class="btn btn-primary btn-lg">Contact</a>
+      </div>
     </div>
   </div>
   <!-- /Full Page Image Header Area -->
@@ -65,19 +67,19 @@
 
     <!-- EDUCATION -->
     <div id="education">
-      <hr class="featurette-divider">
-
-      <h1 class="heading">Education</h1>
 
       <hr class="featurette-divider">
 
 
       <!-- ITT -->
       <div class="featurette" id="ITT">
-        <img class="featurette-image img-responsive pull-right" src="images/IT_Tallaght_logo.jpg">
+        <img class="featurette-image img-responsive pull-right" src="images/IT_Tallaght_logo.jpg" alt="IT Tallaght College Logo">
         <h2 class="featurette-heading">IT Tallaght <span class="text-muted">BSc (Hons)</span></h2>
         <h3>Computing</h3>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <p class="lead">I spent 4 years at the Institute of Technology, Tallaght between 2010 and 2014. I am expecting to graduate with a 1.1 having maintained a high GPA every year in the course.</p>
+        <p>Every year, exclusive of year 1, we were expected to complete a project. Projects would account for one module in the final semester of the year, except our final year, where it would account for one module for each semester. In these projects, my team mates and I chose to work with technologies such as; Java, JDBC, SQL, C#, MVC, JQuery, Entity Framework and Azure. These projects can be seen at the link below</p>
+        <p>Aside from these projects, continous assesments allowed us to explore other technologies such as Javascript, Android, RESTful services, AJAX etc. Some of these assignments are available on my <a href="http://github.com/smur89/">GitHub</a> page</p>
+        <p>Throughout my time at the college, I was a member of the Snowsports society and the Adventure society, taking part in activites such as Snowboarding, Kayaking and Surfing.</p>
 
         <!-- GPA -->
         <div class="list-group" id="GPA">
@@ -123,44 +125,43 @@
 
       <!-- IADT -->
       <div class="featurette" id="IADT">
-        <img class="featurette-image img-responsive pull-left" src="images/IADT_logo.jpg">
+        <img class="featurette-image img-responsive pull-left" src="images/IADT_logo.jpg" alt="Institute of Art, Design and Technology College Logo">
         <h2 class="featurette-heading"><abbr title="Institute of Art, Design and Technology, Dun Laoghaire">IADT</abbr> <span class="text-muted">Higher Certificate in Engineering </span></h2>
         <h3>Audio Visual Media Technology</h3>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <p class="lead">I studied at <abbr title="Institute of Art, Design and Technology, Dun Laoghaire">IADT</abbr> for 2 years and was awarded a Higher Certificate of Engineering. In my time at IADT I was able to gain experience in graphic design and image editing, video editing, sound recording/production/engineering, electronics and networking, among onthers.</p>
       </div>
     </div> <!-- /education -->
 
 
     <!-- Experience -->
     <div id="experience">
-      <hr class="featurette-divider">
-
-      <h1 class="heading">Experience</h1>
 
       <hr class="featurette-divider">
       <!-- Guidewire -->
       <div class="featurette" id="guidewire">
-        <img class="featurette-image img-responsive pull-right" src="images/Guidewire_logo.png">
+        <img class="featurette-image img-responsive pull-right" src="images/Guidewire_logo.png" alt="Guidewire Software, Inc. Company Logo">
         <h2 class="featurette-heading">Guidewire <span class="text-muted">Software Development Intern</span></h2>
         <h3>Summer 2013</h3>
 
         <p class="lead">
-          during the summer months of 2013, I was taken on as a Software Development Intern by <a href="http://guidewire.com">Guidewire software, Inc.</a> I was afforded the opportunity to develope my software development skills and employ any theoretical knowledge acquired throughout my time at <a href="#ITT">IT Tallaght</a> and become familliar with many industry standard technologies and tools.
-        </p><p>
-        In particular, I gained some valuable experience with Agile methodologies (Kanban specifically), Unit Testing, Maven, Git and GitHub, Python, Gosu, Documentation, the JVM, Compilation, Parsing, Syntax Trees, Heap and Stack memory, Garbage Collection, Profiling, Presentations, Demos and Guidewire Products.
-      </p><p>
-      As I was part of the first group of EMEA interns taken on by Guidewire, I was asked to document my experience in the form of a blog post towards the end of my time with the company. This post can be seen here:
-    </p>
-    <!-- Button trigger guidewire blog modal -->
-    <a data-toggle="modal" href="#guidewireBlog" class="btn btn-primary btn-sm pull-right">Guidewire Blog</a>
-  </div>
+          During the summer months of 2013, I was taken on as a Software Development Intern by <a href="http://guidewire.com">Guidewire software, Inc.</a> I was afforded the opportunity to develope my software development skills and employ any theoretical knowledge acquired throughout my time at <a href="#ITT">Institute of Technology, Tallaght</a> and become familliar with many industry standard technologies and tools.
+        </p>
+        <p>
+          In particular, I gained some valuable experience with Agile methodologies (Kanban specifically), Unit Testing, Maven, Git and GitHub, Python, Gosu, Documentation, the JVM, Compilation, Parsing, Syntax Trees, Heap and Stack memory, Garbage Collection, Profiling, Presentations, Demos and Guidewire Products.
+        </p>
+        <p>
+          As I was part of the first group of EMEA interns taken on by Guidewire, I was asked to document my experience in the form of a blog post towards the end of my time with the company. This post can be seen here:
+        </p>
+        <!-- Button trigger guidewire blog modal -->
+        <a data-toggle="modal" data-target="#guidewireModal" class="btn btn-primary btn-sm pull-right">Guidewire Blog</a>
+      </div>
 
   <hr class="featurette-divider">
 
   <div class="featurette" id="ibm">
-    <img class="featurette-image img-responsive pull-left" src="images/IBM_logo.jpeg">
+    <img class="featurette-image img-responsive pull-left" src="images/IBM_logo.jpg" alt="IBM Company Logo">
     <h2 class="featurette-heading"><abbr title="International Business Machines">IBM</abbr> <span class="text-muted">Final Year Project</span></h2>
-    <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+    <p class="lead">I worked in conjunction with IBM as part of my .</p>
   </div>
 
 </div> <!-- /experience -->
@@ -168,15 +169,15 @@
 <hr class="featurette-divider">
 
 <div class="featurette" id="seeking">
-  <img class="featurette-image img-circle img-responsive pull-right" src="images/Coding.jpg">
+  <img class="featurette-image img-circle img-responsive pull-right" src="images/SoftwareEng.jpg" alt="Coding image">
   <h2 class="featurette-heading">Seeking <span class="text-muted">Development Roles.</span></h2>
-  <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+  <p class="lead">I am interested in developing Enterprise Application software and would be particularly interested media related applications where I can put my knowledge of this field to use.</p>
 </div>
 
 <hr class="featurette-divider">
 
 <div class="featurette" id="about">
-  <img class="featurette-image img-circle img-responsive pull-right" src="http://placecreature.com/500/500">
+  <img class="featurette-image img-circle img-responsive pull-left" src="images/Hobbies.jpg" alt="Hobbies tag cloud">
   <h2 class="featurette-heading">About <span class="text-muted">Personal Details.</span></h2>
   <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
 </div>
@@ -197,7 +198,7 @@
 </div><!-- /container -->
 
 <!-- Modal -->
-<div class="modal fade" id="contact" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal fade" id="contactModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -266,7 +267,7 @@
 <!-- End Modal -->
 
 <!-- Modal 2-->
-<div class="modal fade" id="guidewireBlog" tabindex="-1" role="alert" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal fade" id="guidewireModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
