Almost happy with it...

--- a/Index.html
+++ b/Index.html
@@ -37,6 +37,7 @@
         <ul class="nav navbar-nav">
           <li><a href="#education">Education</a></li>
           <li><a href="#experience">Experience</a></li>
+          <li><a href="#projects">Projects</a></li>
           <li><a href="#seeking">Seeking</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="http://github.com/smur89/">GitHub</a></li>
@@ -77,8 +78,8 @@
         <h2 class="featurette-heading">IT Tallaght <span class="text-muted">BSc (Hons)</span></h2>
         <h3>Computing</h3>
         <p class="lead">I spent 4 years at the Institute of Technology, Tallaght between 2010 and 2014. I am expecting to graduate with a 1.1 having maintained a high GPA every year in the course.</p>
-        <p>Every year, exclusive of year 1, we were expected to complete a project. Projects would account for one module in the final semester of the year, except our final year, where it would account for one module for each semester. In these projects, my team mates and I chose to work with technologies such as; Java, JDBC, SQL, C#, MVC, JQuery, Entity Framework and Azure. These projects can be seen at the link below</p>
-        <p>Aside from these projects, continous assesments allowed us to explore other technologies such as Javascript, Android, RESTful services, AJAX etc. Some of these assignments are available on my <a href="http://github.com/smur89/">GitHub</a> page</p>
+        <p>Every year, exclusive of year 1, we were expected to complete a project. Projects would account for one module in the final semester of the year, except our final year, where it would account for one module for each semester. In these projects, my team mates and I chose to work with technologies such as; Java, JDBC, SQL, C#, MVC, JQuery, Entity Framework and Azure.</p>
+        <p>Aside from these projects, continous assesments allowed us to explore other technologies such as Javascript, Android, RESTful services, AJAX etc. These projects are explored in more detail in the projects sectionw</p>
         <p>Throughout my time at the college, I was a member of the Snowsports society and the Adventure society, taking part in activites such as Snowboarding, Kayaking and Surfing.</p>
 
         <!-- GPA -->
@@ -103,24 +104,6 @@
           <p class="list-group-item-text">Expected 1.1</p></a>
         </div> <!-- /GPA List Group -->
 
-        <!-- Projects -->
-        <div class="list-group">
-          <a href="#" class="list-group-item active">
-          <h4 class="list-group-item-heading">Projects</h4></a>
-
-          <a href="http://github.com/smur89/Payroll" class="list-group-item">
-          <h4 class="list-group-item-heading">Year 2</h4>
-          <p class="list-group-item-text">Java Payroll System</p></a>
-
-          <a href="http://github.com/smur89/eUp" class="list-group-item">
-          <h4 class="list-group-item-heading">Year 3</h4>
-          <p class="list-group-item-text">eUp</p></a>
-
-          <a href="http://github.com/smur89/IBM-CD-Dashboard" class="list-group-item">
-          <h4 class="list-group-item-heading">Year 4</h4>
-          <p class="list-group-item-text">IBM CD Adoption Dashboard</p></a>
-        </div> <!-- /Projects List Group -->
-
       </div>
 
       <!-- IADT -->
@@ -128,7 +111,7 @@
         <img class="featurette-image img-responsive pull-left" src="images/IADT_logo.jpg" alt="Institute of Art, Design and Technology College Logo">
         <h2 class="featurette-heading"><abbr title="Institute of Art, Design and Technology, Dun Laoghaire">IADT</abbr> <span class="text-muted">Higher Certificate in Engineering </span></h2>
         <h3>Audio Visual Media Technology</h3>
-        <p class="lead">I studied at <abbr title="Institute of Art, Design and Technology, Dun Laoghaire">IADT</abbr> for 2 years and was awarded a Higher Certificate of Engineering. In my time at IADT I was able to gain experience in graphic design and image editing, video editing, sound recording/production/engineering, electronics and networking, among onthers.</p>
+        <p class="lead">I studied at <abbr title="Institute of Art, Design and Technology, Dun Laoghaire">IADT</abbr> for 2 years and was awarded a Higher Certificate of Engineering. In my time at IADT I was able to gain experience in graphic design and image editing, video editing, sound recording/production/engineering, electronics and networking, among others.</p>
       </div>
     </div> <!-- /education -->
 
@@ -139,12 +122,12 @@
       <hr class="featurette-divider">
       <!-- Guidewire -->
       <div class="featurette" id="guidewire">
-        <img class="featurette-image img-responsive pull-right" src="images/Guidewire_logo.png" alt="Guidewire Software, Inc. Company Logo">
+        <img class="featurette-image img-responsive pull-right" src="images/Guidewire_logo.jpg" alt="Guidewire Software, Inc. Company Logo">
         <h2 class="featurette-heading">Guidewire <span class="text-muted">Software Development Intern</span></h2>
         <h3>Summer 2013</h3>
 
         <p class="lead">
-          During the summer months of 2013, I was taken on as a Software Development Intern by <a href="http://guidewire.com">Guidewire software, Inc.</a> I was afforded the opportunity to develope my software development skills and employ any theoretical knowledge acquired throughout my time at <a href="#ITT">Institute of Technology, Tallaght</a> and become familliar with many industry standard technologies and tools.
+          During the summer months of 2013, I was taken on as a Software Development Intern by <a href="http://guidewire.com">Guidewire software, Inc.</a> I was afforded the opportunity to develope my software development skills and employ any theoretical knowledge acquired throughout my time at <a href="#ITT">Institute of Technology, Tallaght</a> and became familliar with many industry standard technologies and tools.
         </p>
         <p>
           In particular, I gained some valuable experience with Agile methodologies (Kanban specifically), Unit Testing, Maven, Git and GitHub, Python, Gosu, Documentation, the JVM, Compilation, Parsing, Syntax Trees, Heap and Stack memory, Garbage Collection, Profiling, Presentations, Demos and Guidewire Products.
@@ -165,6 +148,69 @@
   </div>
 
 </div> <!-- /experience -->
+
+<hr class="featurette-divider">
+
+<div class="featurette" id="projects">
+  <h2 class="featurette-heading">Projects <span class="text-muted">Undertaken at <abbr title="Institute of Technology Tallaght">ITT</abbr>.</span></h2>
+  <p class="lead"></p>
+
+  <!-- Projects -->
+  <div class="container">
+    <div class="row">
+      <h3>Projects</h3>
+    </div>
+
+    <div class="row">
+
+      <h4 class="col-md-2">Year 2</h4>
+      <div class="col-md-3">Java Payroll System</div>
+      <a href="http://github.com/smur89/Payroll"><div class="col-md-3">GitHub</div></a>
+      <a href="Year2Project/usermanual.html"><div class="col-md-3">User Manual</div></a>
+
+      <div class="row">
+        <div class="col-md-3">Land Lovers Website</div>
+        <a href="http://github.com/smur89/Land-Lovers-Website"><div class="col-md-3">GitHub</div></a>
+        <a href="LandLovers/html/index.html"><div class="col-md-3">View</div></a>
+      </div> 
+    </div><br/>
+
+    <div class="row">
+      <h4 class="col-md-2">Year 3</h4>
+      <div class="col-md-3">eUp</div>
+      <a href="http://github.com/smur89/eUp"><div class="col-md-3">GitHub</div></a>
+      <a href="Year2Project/usermanual.html"><div class="col-md-3"> </div></a>
+    </div><br/>
+
+    <div class="row">
+      <h4 class="col-md-2">Year 4</h4>
+      <div class="col-md-3">IBM CD Adoption Dashboard</div>
+      <a href="http://github.com/smur89/IBM-CD-Dashboard"><div class="col-md-3">GitHub</div></a>
+      <a href="Year2Project/usermanual.html"><div class="col-md-3"> </div></a>
+    </div><br/>
+
+
+</div><!-- /Projects List Group -->
+
+     <!-- Projects -->
+  <!-- <div class="list-group">
+    <a href="#" class="list-group-item active">
+    <h4 class="list-group-item-heading">Projects</h4></a>
+
+    <a href="http://github.com/smur89/Payroll" class="list-group-item">
+    <h4 class="list-group-item-heading">Year 2</h4>
+    <p class="list-group-item-text">Java Payroll System</p>
+   </a>
+
+    <a href="http://github.com/smur89/eUp" class="list-group-item">
+    <h4 class="list-group-item-heading">Year 3</h4>
+    <p class="list-group-item-text">eUp</p></a>
+
+    <a href="http://github.com/smur89/IBM-CD-Dashboard" class="list-group-item">
+    <h4 class="list-group-item-heading">Year 4</h4>
+    <p class="list-group-item-text">IBM CD Adoption Dashboard</p></a>
+  </div>  --><!-- /Projects List Group -->
+</div>
 
 <hr class="featurette-divider">
 
@@ -190,7 +236,7 @@
 <!-- FOOTER -->
 <footer>
   <p>
-    Copyright &copy; Company 2013 &middot; Facebook &middot; Twitter &middot; Google+
+    Copyright &copy; Shane Murphy 2013 &middot; <a href="http://ie.linkedin.com/in/smur89/">LinkedIn</a> &middot; <a href="http://twitter.com/smur89">Twitter</a> &middot; <a href="http://last.fm/user/smur89">LastFm</a>
   </p>
 </footer>
 <!-- /END OF FOOTER -->
@@ -272,7 +318,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h4 class="modal-title">Guidewire Blog</h4>
+        <img class="modal-title" src="images/Guidewire_logo_sm.jpg" alt="Guidewire Software, Inc Logo" />
       </div>
       <div class="modal-body">
         <p>
