Added IBM Project Details

--- a/Index.html
+++ b/Index.html
@@ -144,7 +144,7 @@
   <div class="featurette" id="ibm">
     <img class="featurette-image img-responsive pull-left" src="images/IBM_logo.jpg" alt="IBM Company Logo">
     <h2 class="featurette-heading"><abbr title="International Business Machines">IBM</abbr> <span class="text-muted">Final Year Project</span></h2>
-    <p class="lead">I worked in conjunction with IBM as part of my .</p>
+    <p class="lead">I worked in conjunction with IBM as part of my final year project. The project was to support IBM teams on their migration into a Continuous Delivery development pattern. This pattern of development involves techniques such as automated testing, continuous integration and continuous deployment with the goal of developing robust, reliable software, with the ability to quickly deploy bug fixes. I was tasked with creating an IBM Collaboration Solutions Continuous Delivery Adoption dashboard to monitor on a team by team basis, their progress in adopting <abbr title="Continous Delivery">CD</abbr>. As the teams progress, each <abbr title="IBM Collaboration Solutions">ICS</abbr> Director is required to report progress on a set of CD Transformation Checkpoints and Metrics to Executives on a regular and scheduled basis. My Dashboard was to aid in this process by collecting data from various sources (Jenkins, RTC, RQM, etc.) about the Manual Test Duration, API Test Coverage, Time from final code submission to production on the cloud and on premises, <abbr title-"Software Problem Reports">SPRs</abbr> opened per capital and Cumulative Open and Deferred Defects.</p>
   </div>
 
 </div> <!-- /experience -->
@@ -172,14 +172,12 @@
       </div> 
     </div><br/>
 
-    <div class="divider"></div>
-
     <div class="row">
       <h4>Year 3</h4>
       <div class="row">
         <div class="col-md-3">eUp</div>
         <a href="http://github.com/smur89/eUp"><div class="col-md-2">GitHub</div></a>
-        <a href="Year2Project/usermanual.html"><div class="col-md-2"> </div></a>
+        <a href=""><div class="col-md-2"> </div></a>
       </div>
     </div><br/>
 
@@ -188,7 +186,7 @@
       <div class="row">
         <div class="col-md-3">IBM CD Adoption Dashboard</div>
         <a href="http://github.com/smur89/IBM-CD-Dashboard"><div class="col-md-2">GitHub</div></a>
-        <a href="Year2Project/usermanual.html"><div class="col-md-2"> </div></a>
+        <a href=""><div class="col-md-2"> </div></a>
       </div>
     </div><br/>
 
