--- a/Index.html
+++ b/Index.html
@@ -15,6 +15,9 @@
   <!-- Custom CSS -->
   <link href="css/one-page-wonder.css" rel="stylesheet">
 
+  <!-- Favicon -->
+  <link rel="shortcut icon" href="/images/favicon.ico" type="image/vnd.microsoft.icon" /> 
+  <link rel="icon" href="/images/favicon.ico" type="image/vnd.microsoft.icon" /> 
 
 </head>
 
@@ -79,7 +82,7 @@
         <h3>Computing</h3>
         <p class="lead">I spent 4 years at the Institute of Technology, Tallaght between 2010 and 2014. I am expecting to graduate with a 1.1 having maintained a high GPA every year in the course.</p>
         <p>Every year, exclusive of year 1, we were expected to complete a project. Projects would account for one module in the final semester of the year, except our final year, where it would account for one module for each semester. In these projects, my team mates and I chose to work with technologies such as; Java, JDBC, SQL, C#, MVC, JQuery, Entity Framework and Azure.</p>
-        <p>Aside from these projects, continous assesments allowed us to explore other technologies such as Javascript, Android, RESTful services, AJAX etc. These projects are explored in more detail in the projects sectionw</p>
+        <p>Aside from these projects, continous assesments allowed us to explore other technologies such as Javascript, Android, RESTful services, AJAX etc. These projects are explored in more detail in the projects section</p>
         <p>Throughout my time at the college, I was a member of the Snowsports society and the Adventure society, taking part in activites such as Snowboarding, Kayaking and Surfing.</p>
 
         <!-- GPA -->
